--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -44,6 +44,10 @@ http {
             index index.html;
         }
 
+        location /healthz.html {
+            access_log off;
+        }
+
         location = /404.html {
         }
     }
